--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -247,6 +247,9 @@
     <ClInclude Include="CTexture.h">
       <Filter>08. Asset\Texture</Filter>
     </ClInclude>
+    <ClInclude Include="CCamera.h">
+      <Filter>07. Component\02. Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -329,6 +332,9 @@
     </ClCompile>
     <ClCompile Include="CTexture.cpp">
       <Filter>08. Asset\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="CCamera.cpp">
+      <Filter>07. Component\02. Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
