RenderMgr추가 및 Camera가 렌더링 할 수 있도록 수정
- 현재는 카메라에서 현재 레벨에 있는 모든 레이어의 오브젝트를 렌더링 하게 한다. (추후 개선 예정)

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -137,6 +137,9 @@
     <Filter Include="04. Manager\05.LevelMgr">
       <UniqueIdentifier>{3f2a00f0-07cc-4b8f-b820-d1ea91157499}</UniqueIdentifier>
     </Filter>
+    <Filter Include="04. Manager\06.RenderMgr">
+      <UniqueIdentifier>{53383f85-fe9b-4f7d-8922-063fa2792d76}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -250,6 +253,7 @@
     <ClInclude Include="CCamera.h">
       <Filter>07. Component\02. Camera</Filter>
     </ClInclude>
+    <ClInclude Include="CRenderMgr.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -336,6 +340,7 @@
     <ClCompile Include="CCamera.cpp">
       <Filter>07. Component\02. Camera</Filter>
     </ClCompile>
+    <ClCompile Include="CRenderMgr.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SimpleMath.inl">
