--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -254,6 +254,9 @@
       <Filter>07. Component\02. Camera</Filter>
     </ClInclude>
     <ClInclude Include="CRenderMgr.h" />
+    <ClInclude Include="CCameraMoveScript.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -341,6 +344,12 @@
       <Filter>07. Component\02. Camera</Filter>
     </ClCompile>
     <ClCompile Include="CRenderMgr.cpp" />
+    <ClCompile Include="extern.cpp">
+      <Filter>01. Header</Filter>
+    </ClCompile>
+    <ClCompile Include="CCameraMoveScript.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="SimpleMath.inl">
